name:     ashfall-json
version:  0.1.0
category: Utils
synopsis: Ashfall JSON converter

maintainer:   Michael Fitzmayer <mail@michael-fitzmayer.de>
author:       Ertugrul Söylemez <esz@posteo.de>
copyright:    Copyright 2017 Ertugrul Söylemez
homepage:     https://github.com/mupfelofen-de/Ashfall
bug-reports:  https://github.com/mupfelofen-de/Ashfall
license:      BSD3
license-file: LICENSE

description:  Parse strings into numbers or ranges of numbers, combine
    separate effect hashes into effect arrays, downcase refIds.

build-type:         Simple
cabal-version:      >= 1.10

source-repository head
    type:     git
    location: https://github.com/mupfelofen-de/Ashfall


executable ashfall-json
    build-depends:
        base >= 4.8 && < 4.10,
        aeson,
        bytestring,
        lens,
        lens-aeson,
        mtl,
        scientific,
        text,
        unordered-containers,
        vector
    default-language: Haskell2010
    ghc-options: -W -threaded
    main-is: Main.hs
